<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.MrsOffspringFormActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/mrsOffspringFormToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:hapticFeedbackEnabled="false"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:title="@string/addForm"
            app:titleTextColor="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dip"
            android:layout_marginTop="20dip"
            android:layout_marginEnd="10dip"
            android:layout_marginBottom="5dip"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mrsOffspringFormCountLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="5dip"
                android:text="@string/mrs_count_label"
                android:textColor="@color/colorLabelDark"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/mrsOffspringFormCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/edit_text"
                android:ems="10"
                android:inputType="number"
                android:text="1" />

            <TextView
                android:id="@+id/mrsOffspringFormSpeciesLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="5dip"
                android:text="@string/mrs_spices_label"
                android:textColor="@color/colorLabelDark"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/mrsOffspringFormSpecies"
                android:layout_width="match_parent"
                android:layout_height="48dip"
                android:background="@android:drawable/btn_dropdown" />

            <TextView
                android:id="@+id/MRSFormLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="5dip"
                android:text="@string/numberLabel"
                android:textColor="@color/colorLabelDark"
                android:textSize="16sp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/MRSFormNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/edit_text"
                android:ems="10"
                android:inputType="textPersonName"
                android:visibility="gone" />

            <TextView
                android:id="@+id/mrsOffspringFormAgeLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="5dip"
                android:text="@string/ageLabel"
                android:textColor="@color/colorLabelDark"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dip"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dip"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/year"
                        android:textColor="@color/colorLabelDark"
                        android:textSize="16sp"></TextView>

                    <EditText
                        android:id="@+id/mrsOffspringFormAgeYear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:drawable/edit_text"
                        android:ems="10"
                        android:inputType="number" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dip"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/month"
                        android:textColor="@color/colorLabelDark"></TextView>

                    <EditText
                        android:id="@+id/mrsOffspringFormAgeMonth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:drawable/edit_text"
                        android:ems="10"
                        android:inputType="number" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dip"
            android:layout_marginEnd="10dip"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mrsOffspringFormLabelSex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="5dip"
                android:text="@string/sex"
                android:textColor="@color/colorLabelDark"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/mrsOffspringFormRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dip"
                android:layout_marginTop="5dip"
                android:layout_marginEnd="10dip"
                android:orientation="horizontal">


                <RadioButton
                    android:id="@+id/mrsOffspringFromMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dip"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/mrsOffspringFormFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dip"
                    android:layout_marginEnd="5dip"
                    android:text="@string/female" />
            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/mrsOffspringFormSaveBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dip"
            android:layout_marginTop="20dip"
            android:layout_marginEnd="10dip"
            android:background="@color/colorPrimary"
            android:text="@string/save"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>