<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.HorseFormActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/horseFormToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:hapticFeedbackEnabled="false"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:title="@string/addForm"
            app:titleTextColor="@android:color/white" />
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="256dip"
            android:orientation="vertical">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/horseFormImageConstraint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/horseFormBanner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </androidx.viewpager.widget.ViewPager>
                <ImageButton
                    android:id="@+id/horseFormUploadBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="43dp"
                    android:background="@android:drawable/screen_background_dark_transparent"
                    android:padding="10dip"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_camera_alt_black_24dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <LinearLayout
                android:id="@+id/horseFormDots"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="10dip"
            android:layout_marginEnd="10dip"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="5dip">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dip"
                android:layout_marginEnd="10dip"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/horseFormLabelName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:layout_marginBottom="5dip"
                    android:text="@string/horse_type"
                    android:textColor="@color/colorLabelDark"
                    android:textSize="16sp" />

                <RadioGroup
                    android:id="@+id/horseFormNameRG"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dip"
                    android:layout_marginTop="5dip"
                    android:layout_marginEnd="10dip"
                    android:orientation="horizontal">


                    <RadioButton
                        android:id="@+id/horseFormHorse"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dip"
                        android:text="@string/horse_name" />

                    <RadioButton
                        android:id="@+id/horseFormDonkey"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dip"
                        android:layout_marginEnd="5dip"
                        android:text="@string/horse_donakey" />
                </RadioGroup>
            </LinearLayout>
            <TextView
                android:id="@+id/horseFormAgeLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="5dip"
                android:text="@string/ageLabel"
                android:textColor="@color/colorLabelDark"
                android:textSize="16sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="10dip">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_marginStart="10dip">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/year"
                        android:textColor="@color/colorLabelDark"
                        android:textSize="16sp"></TextView>
                    <EditText
                        android:id="@+id/horseFormAgeYear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:drawable/edit_text"
                        android:ems="10"
                        android:inputType="number" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_marginStart="10dip">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/month"
                        android:textColor="@color/colorLabelDark"></TextView>
                    <EditText
                        android:id="@+id/horseFormAgeMonth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:drawable/edit_text"
                        android:ems="10"
                        android:inputType="number" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dip"
            android:layout_marginEnd="10dip"
            android:orientation="vertical">

            <TextView
                android:id="@+id/horseFormLabelSex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="5dip"
                android:text="@string/sex"
                android:textColor="@color/colorLabelDark"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/horseFormRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dip"
                android:layout_marginTop="5dip"
                android:layout_marginEnd="10dip"
                android:orientation="horizontal">


                <RadioButton
                    android:id="@+id/horseFormMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dip"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/horseFormFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dip"
                    android:layout_marginEnd="5dip"
                    android:text="@string/female" />
            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/horseFormSaveBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dip"
            android:layout_marginTop="20dip"
            android:layout_marginEnd="10dip"
            android:background="@color/colorPrimary"
            android:text="@string/save"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>