<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right|center_vertical"
        android:paddingTop="10dip"
        android:paddingBottom="10dip">

        <ImageButton
            android:id="@+id/settingsFormCloseBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dip"
            android:background="@drawable/ic_close_black_24dp"
            app:srcCompat="@drawable/ic_close_black_24dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/settingsNameTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/home_form_label_name"
        android:textColor="@color/colorLabelDark"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/settingsName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@android:drawable/edit_text"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/settingsFarmLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/home_form_label_farm"
        android:textColor="@color/colorLabelDark"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/settingsFarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@android:drawable/edit_text"
        android:text="@string/home_form_default_text"
        android:textColor="@color/colorLabelDark"
        android:textSize="16dp" />

    <Button
        android:id="@+id/settingsFormSaveBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@color/colorPrimary"
        android:text="@string/save"
        android:textColor="@color/ic_launcher_background" />

    <ProgressBar
        android:id="@+id/settingsProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:indeterminateTint="@color/colorPrimary"
        android:visibility="gone" />
</LinearLayout>